output products in product_list.html

--- a/templates/product_list.html
+++ b/templates/product_list.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Главная</title>
+    <title>Django Shop</title>
 </head>
 <body>
-    <h1>Товары</h1
+    <h1>Товары</h1>
     {% for product in products %}
         <div class="">
 
